--- a/MonocleMe/Base.lproj/Main.storyboard
+++ b/MonocleMe/Base.lproj/Main.storyboard
@@ -30,7 +30,7 @@
                                         <animations/>
                                         <fontDescription key="fontDescription" name="FontAwesome" family="FontAwesome" pointSize="15"/>
                                         <state key="normal" title="camera">
-                                            <color key="titleColor" red="0.29803921570000003" green="0.54901960780000003" blue="0.56470588239999997" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
                                             <segue destination="MIv-FO-Oiq" kind="show" id="iLx-Vq-HdW"/>
@@ -38,7 +38,7 @@
                                     </button>
                                 </subviews>
                                 <animations/>
-                                <color key="backgroundColor" red="0.12549019610000001" green="0.1058823529" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.3294117647" green="0.37254901959999998" blue="0.4039215686" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="75" id="Zbi-gT-cqt"/>
                                     <constraint firstItem="aKT-YC-JZD" firstAttribute="centerX" secondItem="dvQ-ec-K98" secondAttribute="centerX" id="dF3-7d-9fV"/>
@@ -49,12 +49,12 @@
                                 <rect key="frame" x="162.5" y="288.5" width="275.5" height="23.5"/>
                                 <animations/>
                                 <fontDescription key="fontDescription" name="Avenir-Book" family="Avenir" pointSize="17"/>
-                                <color key="textColor" red="0.12549019610000001" green="0.1058823529" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" red="0.3294117647" green="0.37254901959999998" blue="0.4039215686" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" red="0.59215686270000001" green="0.56078431370000004" blue="0.30980392159999998" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="dvQ-ec-K98" secondAttribute="bottom" id="5eG-00-crZ"/>
                             <constraint firstItem="30a-VT-dxK" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="AvI-1C-iFf"/>
@@ -71,10 +71,10 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
-        <!--View Controller-->
+        <!--Picker View Controller-->
         <scene sceneID="1RV-hK-eqi">
             <objects>
-                <viewController id="MIv-FO-Oiq" sceneMemberID="viewController">
+                <viewController id="MIv-FO-Oiq" customClass="PickerViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="RA5-e0-7CT"/>
                         <viewControllerLayoutGuide type="bottom" id="YEn-31-n0T"/>
@@ -82,9 +82,65 @@
                     <view key="view" contentMode="scaleToFill" id="jRx-Zv-1gs">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DO7-ha-cGf">
+                                <rect key="frame" x="0.0" y="64" width="600" height="461"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qgs-Jo-d25" userLabel="Menu">
+                                <rect key="frame" x="0.0" y="525" width="600" height="75"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bpA-91-YX5">
+                                        <rect key="frame" x="278" y="15" width="44" height="44"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="44" id="F83-an-Xqn"/>
+                                            <constraint firstAttribute="height" constant="44" id="znE-4b-sMc"/>
+                                        </constraints>
+                                        <state key="normal" title="monocle"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="5"/>
+                                            <userDefinedRuntimeAttribute type="string" keyPath="layer.borderWidth" value="1"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                </subviews>
+                                <animations/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="75" id="6da-z7-01g"/>
+                                    <constraint firstItem="bpA-91-YX5" firstAttribute="centerX" secondItem="Qgs-Jo-d25" secondAttribute="centerX" id="Jzg-Oe-y1e"/>
+                                    <constraint firstItem="bpA-91-YX5" firstAttribute="centerY" secondItem="Qgs-Jo-d25" secondAttribute="centerY" id="P5p-AD-jU6"/>
+                                </constraints>
+                            </view>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="MonocleOverlay" translatesAutoresizingMaskIntoConstraints="NO" id="v2l-gy-xff">
+                                <rect key="frame" x="256" y="256" width="88" height="88"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="88" id="Tpw-0l-Uyo"/>
+                                    <constraint firstAttribute="width" constant="88" id="fD5-JC-b5s"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.3294117647" green="0.37254901959999998" blue="0.4039215686" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="v2l-gy-xff" firstAttribute="centerX" secondItem="jRx-Zv-1gs" secondAttribute="centerX" id="AOg-f3-44G"/>
+                            <constraint firstItem="YEn-31-n0T" firstAttribute="top" secondItem="DO7-ha-cGf" secondAttribute="bottom" constant="75" id="B1I-Be-vHd"/>
+                            <constraint firstItem="YEn-31-n0T" firstAttribute="top" secondItem="Qgs-Jo-d25" secondAttribute="bottom" id="MV6-aB-cmL"/>
+                            <constraint firstAttribute="trailing" secondItem="DO7-ha-cGf" secondAttribute="trailing" id="OOC-SO-F3W"/>
+                            <constraint firstItem="Qgs-Jo-d25" firstAttribute="leading" secondItem="jRx-Zv-1gs" secondAttribute="leading" id="Uh4-Qg-5Ft"/>
+                            <constraint firstItem="v2l-gy-xff" firstAttribute="centerY" secondItem="jRx-Zv-1gs" secondAttribute="centerY" id="Zr3-I9-bGG"/>
+                            <constraint firstItem="DO7-ha-cGf" firstAttribute="leading" secondItem="jRx-Zv-1gs" secondAttribute="leading" id="dQI-VL-KcY"/>
+                            <constraint firstItem="DO7-ha-cGf" firstAttribute="top" secondItem="RA5-e0-7CT" secondAttribute="bottom" id="l1t-E0-VAe"/>
+                            <constraint firstAttribute="trailing" secondItem="Qgs-Jo-d25" secondAttribute="trailing" id="xfL-A7-Jf4"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="DO7-ha-cGf" id="Evl-9r-ger"/>
+                        <outlet property="monocleButton" destination="bpA-91-YX5" id="heW-z9-fbi"/>
+                        <outlet property="monocleImageView" destination="v2l-gy-xff" id="qYf-ge-4AV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="miF-Tw-agj" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -108,4 +164,7 @@
             <point key="canvasLocation" x="-657" y="-272"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="MonocleOverlay" width="286" height="494"/>
+    </resources>
 </document>
