--- a/MonocleMe/Base.lproj/Main.storyboard
+++ b/MonocleMe/Base.lproj/Main.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ret-Ut-yKv">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ret-Ut-yKv">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <customFonts key="customFonts">
         <mutableArray key="FontAwesome.ttf">
+            <string>FontAwesome</string>
             <string>FontAwesome</string>
         </mutableArray>
     </customFonts>
@@ -40,9 +41,6 @@
                                             <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="5"/>
                                             <userDefinedRuntimeAttribute type="string" keyPath="layer.borderWidth" value="1"/>
                                         </userDefinedRuntimeAttributes>
-                                        <connections>
-                                            <segue destination="MIv-FO-Oiq" kind="show" id="iLx-Vq-HdW"/>
-                                        </connections>
                                     </button>
                                 </subviews>
                                 <animations/>
@@ -132,28 +130,47 @@
                                     <outlet property="delegate" destination="ret-Ut-yKv" id="IEg-2S-r3G"/>
                                 </connections>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iRn-Gc-Dog">
+                                <rect key="frame" x="278" y="540" width="44" height="44"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="HaF-vW-lKf"/>
+                                    <constraint firstAttribute="width" constant="44" id="xuK-EM-W8q"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="FontAwesome" family="FontAwesome" pointSize="30"/>
+                                <state key="normal" title="C">
+                                    <color key="titleColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="cameraButtonTouchUpInside:" destination="ret-Ut-yKv" eventType="touchUpInside" id="dBt-nh-gJ9"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <animations/>
                         <color key="backgroundColor" red="0.3294117647" green="0.37254901959999998" blue="0.4039215686" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="iRn-Gc-Dog" firstAttribute="centerX" secondItem="lah-XP-7AA" secondAttribute="centerX" id="I28-PI-Uss"/>
                             <constraint firstItem="M9e-Fe-LNk" firstAttribute="top" secondItem="mJr-Sx-UMV" secondAttribute="bottom" constant="75" id="Jhl-l1-K8c"/>
+                            <constraint firstItem="M9e-Fe-LNk" firstAttribute="top" secondItem="iRn-Gc-Dog" secondAttribute="bottom" constant="16" id="TEc-Od-oIA"/>
                             <constraint firstItem="mJr-Sx-UMV" firstAttribute="leading" secondItem="lah-XP-7AA" secondAttribute="leading" id="bNN-Fk-My4"/>
                             <constraint firstAttribute="trailing" secondItem="mJr-Sx-UMV" secondAttribute="trailing" id="bv2-Ro-d9V"/>
                             <constraint firstItem="mJr-Sx-UMV" firstAttribute="top" secondItem="aSr-3K-yrK" secondAttribute="bottom" id="tEC-Zn-5Za"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="cameraButton" destination="iRn-Gc-Dog" id="eyV-FS-Zvc"/>
                         <outlet property="collectionView" destination="mJr-Sx-UMV" id="U62-Tv-ZV7"/>
+                        <segue destination="MIv-FO-Oiq" kind="show" identifier="showEditor" id="msV-9l-74I"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="p1k-v8-Ky3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="580" y="1735"/>
+            <point key="canvasLocation" x="445" y="1747"/>
         </scene>
-        <!--Picker View Controller-->
+        <!--Monocle Editor View Controller-->
         <scene sceneID="1RV-hK-eqi">
             <objects>
-                <viewController id="MIv-FO-Oiq" customClass="PickerViewController" sceneMemberID="viewController">
+                <viewController id="MIv-FO-Oiq" customClass="MonocleEditorViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="RA5-e0-7CT"/>
                         <viewControllerLayoutGuide type="bottom" id="YEn-31-n0T"/>
@@ -162,7 +179,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DO7-ha-cGf">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DO7-ha-cGf">
                                 <rect key="frame" x="0.0" y="64" width="600" height="461"/>
                                 <animations/>
                                 <color key="backgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
@@ -288,7 +305,7 @@
                     </connections>
                 </rotationGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="885" y="369"/>
+            <point key="canvasLocation" x="1221" y="1029"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="QyA-lg-Kqc">
